[gd_scene load_steps=9 format=3 uid="uid://ewd2xwac6k8r"]

[ext_resource type="Script" path="res://GameTest.gd" id="1_kdyac"]
[ext_resource type="PackedScene" uid="uid://b78h2t3hvwijs" path="res://Scenes/background.tscn" id="1_kkwen"]
[ext_resource type="StyleBox" uid="uid://beihhnorkjqc4" path="res://Assets/Tres/HiraButtons/Hira_Button_Normal.tres" id="4_a1y3q"]
[ext_resource type="StyleBox" uid="uid://cokwr0l2xhlwr" path="res://Assets/Tres/HiraButtons/Hira_Button_Pressed.tres" id="6_hjxww"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_il7rg"]
modulate_color = Color(0.972549, 0.690196, 0.823529, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x86i2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lopuv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s4jbw"]

[node name="CanvasLayer2" type="CanvasLayer"]
script = ExtResource("1_kdyac")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(1080, 2400)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -1200.0
offset_right = 540.0
offset_bottom = 1200.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0

[node name="background" parent="Control" instance=ExtResource("1_kkwen")]

[node name="NavBarTop" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -540.0
offset_top = -248.0
offset_right = 540.0
offset_bottom = -8.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_il7rg")

[node name="ProgressBar" type="ProgressBar" parent="Control/NavBarTop"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -492.0
offset_top = -24.0
offset_right = 218.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00258, 1.01538)
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 30
show_percentage = false

[node name="Back_Button" type="Button" parent="Control/NavBarTop"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -272.0
offset_top = -80.0
offset_right = -40.0
offset_bottom = 80.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.776471, 0.741176, 1)
theme_override_colors/font_pressed_color = Color(0, 0.776471, 0.741176, 1)
theme_override_colors/font_hover_color = Color(0, 0.776471, 0.741176, 1)
theme_override_colors/font_focus_color = Color(0, 0.776471, 0.741176, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0.776471, 0.741176, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 75
theme_override_styles/focus = SubResource("StyleBoxEmpty_x86i2")
text = "Back"

[node name="NavBarBottom" type="Panel" parent="Control"]
custom_minimum_size = Vector2(1080, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -540.0
offset_top = 16.0
offset_right = 540.0
offset_bottom = 296.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Label" type="Label" parent="Control/NavBarBottom"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = ExtResource("4_a1y3q")
text = "Correct!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuestionControl" type="Control" parent="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 40.0
offset_top = 280.0
offset_right = 1040.0
offset_bottom = 1232.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(500, 476)

[node name="Label" type="Label" parent="Control/QuestionControl"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -364.0
offset_top = -364.0
offset_right = 364.0
offset_bottom = 364.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 133
theme_override_font_sizes/font_size = 400
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnswerVbox" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1136.0
offset_top = 72.0
offset_right = 1056.0
offset_bottom = 840.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="AnswerLineEdit" type="LineEdit" parent="Control/AnswerVbox"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_colors/font_placeholder_color = Color(0.0823529, 0.556863, 0.729412, 0.568627)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 90
theme_override_styles/focus = SubResource("StyleBoxEmpty_lopuv")
placeholder_text = "\"çŒ«\""
alignment = 1

[node name="CheckButton" type="Button" parent="Control/AnswerVbox"]
visible = false
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = ExtResource("4_a1y3q")
theme_override_styles/hover = ExtResource("4_a1y3q")
theme_override_styles/pressed = ExtResource("6_hjxww")
theme_override_styles/focus = SubResource("StyleBoxEmpty_s4jbw")
text = "Check"

[node name="SoundButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 272.0
offset_top = 1592.0
offset_right = 464.0
offset_bottom = 1824.0
theme_override_font_sizes/font_size = 111
text = "Sound but"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control/SoundButton"]

[node name="MeetPanels" type="Panel" parent="."]
visible = false
offset_left = 40.0
offset_right = 80.0
offset_bottom = 40.0

[node name="Panel2" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = 960.0
offset_right = 1000.0
offset_bottom = 40.0

[node name="Panel5" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = 1000.0
offset_top = 40.0
offset_right = 1040.0
offset_bottom = 80.0

[node name="Panel6" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = 728.0
offset_top = 104.0
offset_right = 768.0
offset_bottom = 144.0

[node name="Panel7" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = 1000.0
offset_top = 112.0
offset_right = 1040.0
offset_bottom = 152.0

[node name="Panel3" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = 960.0
offset_top = 200.0
offset_right = 1000.0
offset_bottom = 240.0

[node name="Panel20" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = 960.0
offset_top = 240.0
offset_right = 1000.0
offset_bottom = 280.0

[node name="Panel21" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = 1000.0
offset_top = 280.0
offset_right = 1040.0
offset_bottom = 320.0

[node name="Panel26" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = 1000.0
offset_top = 1192.0
offset_right = 1040.0
offset_bottom = 1232.0

[node name="Panel27" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = 960.0
offset_top = 1232.0
offset_right = 1000.0
offset_bottom = 1272.0

[node name="Panel28" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = 960.0
offset_top = 1272.0
offset_right = 1000.0
offset_bottom = 1312.0

[node name="Panel29" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = 1000.0
offset_top = 1312.0
offset_right = 1040.0
offset_bottom = 1352.0

[node name="Panel22" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = 960.0
offset_top = 2080.0
offset_right = 1000.0
offset_bottom = 2120.0

[node name="Panel23" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = 1000.0
offset_top = 2040.0
offset_right = 1040.0
offset_bottom = 2080.0

[node name="Panel4" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = 1000.0
offset_top = 160.0
offset_right = 1040.0
offset_bottom = 200.0

[node name="Panel11" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = 960.0
offset_top = 2120.0
offset_right = 1000.0
offset_bottom = 2160.0

[node name="Panel15" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = 1000.0
offset_top = 2160.0
offset_right = 1040.0
offset_bottom = 2200.0

[node name="Panel13" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = 960.0
offset_top = 2360.0
offset_right = 1000.0
offset_bottom = 2400.0

[node name="Panel14" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = 1000.0
offset_top = 2320.0
offset_right = 1040.0
offset_bottom = 2360.0

[node name="Panel16" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = -40.0
offset_top = 2160.0
offset_bottom = 2200.0

[node name="Panel17" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = -40.0
offset_top = 2320.0
offset_bottom = 2360.0

[node name="Panel18" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_top = 2120.0
offset_right = 40.0
offset_bottom = 2160.0

[node name="Panel19" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_top = 2360.0
offset_right = 40.0
offset_bottom = 2400.0

[node name="Panel12" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = -40.0
offset_top = 240.0
offset_bottom = 280.0

[node name="Panel8" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = -40.0
offset_top = 40.0
offset_bottom = 80.0

[node name="Panel9" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_top = 200.0
offset_right = 40.0
offset_bottom = 240.0

[node name="Panel10" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = -40.0
offset_top = 160.0
offset_bottom = 200.0

[node name="Panel" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = 240.0
offset_top = 240.0
offset_right = 280.0
offset_bottom = 392.0

[node name="Panel30" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = 328.0
offset_top = 1112.0
offset_right = 368.0
offset_bottom = 1264.0

[node name="Panel24" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = 272.0
offset_top = 1104.0
offset_right = 312.0
offset_bottom = 1232.0

[node name="Panel25" type="Panel" parent="MeetPanels"]
layout_mode = 0
offset_left = 272.0
offset_top = 1392.0
offset_right = 312.0
offset_bottom = 1520.0

[connection signal="pressed" from="Control/NavBarTop/Back_Button" to="." method="_on_back_button_pressed"]
[connection signal="text_submitted" from="Control/AnswerVbox/AnswerLineEdit" to="." method="_on_answer_line_edit_text_submitted"]
[connection signal="pressed" from="Control/SoundButton" to="." method="_on_sound_button_pressed"]
